@@ -22,6 +22,7 @@ package xyz.zedler.patrick.grocy.fragment;
 import android.annotation.SuppressLint;
 import android.content.SharedPreferences;
 import android.os.Bundle;
+import android.os.Handler;
 import android.text.Editable;
 import android.util.Log;
 import android.view.LayoutInflater;
@@ -147,8 +148,12 @@ public class MasterProductGroupFragment extends BaseFragment {
     editProductGroup = args.getProductGroup();
     if (editProductGroup != null) {
       fillWithEditReferences();
-    } else {
+    } else if (savedInstanceState == null) {
       resetAll();
+      new Handler().postDelayed(
+          () -> activity.showKeyboard(binding.editTextMasterProductGroupName),
+          50
+      );
     }
 
     // START
