@@ -22,6 +22,7 @@ package xyz.zedler.patrick.grocy.fragment;
 import android.annotation.SuppressLint;
 import android.content.SharedPreferences;
 import android.os.Bundle;
+import android.os.Handler;
 import android.text.Editable;
 import android.util.Log;
 import android.view.LayoutInflater;
@@ -162,8 +163,12 @@ public class MasterQuantityUnitFragment extends BaseFragment {
     editQuantityUnit = args.getQuantityUnit();
     if (editQuantityUnit != null) {
       fillWithEditReferences();
-    } else {
+    } else if (savedInstanceState == null) {
       resetAll();
+      new Handler().postDelayed(
+          () -> activity.showKeyboard(binding.editTextMasterQuantityUnitName),
+          50
+      );
     }
 
     // START
