@@ -21,6 +21,7 @@ package xyz.zedler.patrick.grocy.fragment;
 
 import android.annotation.SuppressLint;
 import android.os.Bundle;
+import android.os.Handler;
 import android.text.Editable;
 import android.util.Log;
 import android.view.LayoutInflater;
@@ -134,8 +135,12 @@ public class MasterStoreFragment extends BaseFragment {
     editStore = args.getStore();
     if (editStore != null) {
       fillWithEditReferences();
-    } else {
+    } else if (savedInstanceState == null) {
       resetAll();
+      new Handler().postDelayed(
+          () -> activity.showKeyboard(binding.editTextMasterStoreName),
+          50
+      );
     }
 
     // START
