@@ -4,6 +4,7 @@
 - New: Grouping feature for stock overview like on server
 - Improved: Unnecessary bottom sheets in master data section were removed
 - Improved: Master product page has new button (save without closing) to add barcodes after creation
+- Improved: Workflow for master data pages with keyboard
 - Fixed: Product info bottom sheet didn't open if location not set in product
 - Fixed: Scrollbars don't stop above the bottom anymore
 - Fixed: Unsorted lists on master data product pages (thanks @Turysaz) (#473)
